fixed the most bugs and handled cascading